# mouse_jiggler

./: README.md  pyproject.toml
src/core/: patterns.py  service.py  value_object.py
src/mouse_jiggler/: __main__.py  cli.py
src/mouse_jiggler/adapters/: daemon_manager.py  fs_repo.py  process_probe.py  pynput_mouse.py  system_time.py  win_power.py
src/mouse_jiggler/core/: patterns.py  ports.py  service.py  value_object.py
